[package]
name = "yew_prism"
authors = ["Francisco Jesus Navarro Cortes"]
categories = ["wasm"]
description = "Yew Prism is a highlighter code component based in Prism for yew"
license= "MIT"
version = "0.1.0"
edition = "2018"
repository = "https://github.com/spielrs/yew_prism.git"
homepage = "https://github.com/spielrs/yew_prism.git"
documentation = "https://github.com/spielrs/yew_prism/blob/master/README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.14", features = ["toml", "yaml", "msgpack", "cbor", "web_sys"]}
wasm-bindgen="0.2"
web-sys={version="0.3"}

[dev-dependencies]
wasm-bindgen-test = "0.3"